# best-practices

./: Readme.md
JIT-AOT-Compilers-master/: CMakeLists.txt  README.md  main.cpp
JIT-AOT-Compilers-master/analysis/: CMakeLists.txt  DSU.cpp  DSU.h  DomTree.cpp  DomTree.h  GraphChecker.cpp  GraphChecker.h  LinearOrdering.cpp  LinearOrdering.h  LivenessAnalyzer.cpp  LivenessAnalyzer.h  LoopAnalyzer.cpp  LoopAnalyzer.h  Traversals.cpp  Traversals.h
JIT-AOT-Compilers-master/cmake/: Findlog4cplus.cmake
JIT-AOT-Compilers-master/codegen/: CMakeLists.txt  LinearScanRegAlloc.cpp  LinearScanRegAlloc.h  RegAllocChecker.cpp  RegAllocChecker.h  RegMap.h
JIT-AOT-Compilers-master/codegen/default/: DefaultArch.cpp  DefaultArch.h
JIT-AOT-Compilers-master/include/: ArchInfoBase.h  CompilerBase.h  CompilerOptions.h  ValueLocation.h
JIT-AOT-Compilers-master/ir/: AnalysisValidityManager.h  BasicBlock.cpp  BasicBlock.h  CMakeLists.txt  Compiler.cpp  Compiler.h  Concepts.h  Graph.cpp  Graph.h  GraphCopyHelper.cpp  GraphCopyHelper.h  GraphTranslationHelper.h  Instruction.cpp  InstructionBase.cpp  InstructionBuilder.h  InstructionsCopy.cpp  LiveAnalysisStructs.cpp  LiveAnalysisStructs.h  Loop.h  PassBase.h
JIT-AOT-Compilers-master/ir/docs/: instructions.md
JIT-AOT-Compilers-master/ir/instructions/: Input.h  Instruction.h  InstructionBase.h  Types.h  Users.h
JIT-AOT-Compilers-master/ir/marker/: marker.h
JIT-AOT-Compilers-master/optimization/: BranchElimination.cpp  BranchElimination.h  CMakeLists.txt  CheckElimination.cpp  CheckElimination.h  ConstantFolding.cpp  ConstantFolding.h  DCE.cpp  DCE.h  EmptyBlocksRemoval.cpp  EmptyBlocksRemoval.h  Inlining.cpp  Inlining.h  Peephole.cpp  Peephole.h
JIT-AOT-Compilers-master/scripts/: install_deps.sh
JIT-AOT-Compilers-master/tests/: BasicBlockTest.cpp  BranchEliminationTest.cpp  CMakeLists.txt  CheckEliminationTest.cpp  CompilerTestBase.h  DCETest.cpp  DomTreeTest.cpp  EmptyBlocksRemovalTest.cpp  GraphTest.cpp  InliningTest.cpp  InstructionsTest.cpp  LinearOrderingTest.cpp  LinearScanRegAllocTest.cpp  LivenessAnalysisTest.cpp  LoopAnalysisTest.cpp  PeepholesTest.cpp  TestGraphSamples.cpp  TestGraphSamples.h  TraversalsTest.cpp
JIT-AOT-Compilers-master/utils/: AllocatorUtils.h  CMakeLists.txt  debug.cpp  debug.h  helpers.h  logger.cpp  logger.h  macros.h
Load-Screen-Application-master/: CMakeLists.txt  README.md  controller.c  controller.h  defines.h  get_dimensions.py  main.c  point.h  screen.c  screen.h  spiral.c  spiral.h
bash_utils_course/: bash_notes_v2.md
leechVM-master/: CMakeLists.txt  README.md
leechVM-master/.github/workflows/: cmake.yml
leechVM-master/cmake/: comp_flags.cmake  upd_tar_list.cmake
leechVM-master/include/common/: common.hh  opcodes.hh  opcodes.ii
leechVM-master/include/executor/: executor.hh
leechVM-master/include/frontend/: frontend.hh  lLexer.hh
leechVM-master/include/gc/: gc.hh
leechVM-master/include/leechVM/: leechVM.hh
leechVM-master/include/leechfile/: leechfile.hh
leechVM-master/include/leechobj/: leechobj.hh
leechVM-master/src/executor/: CMakeLists.txt  callbacks.cc  executor.cc
leechVM-master/src/frontend/: CMakeLists.txt  frontend.cc  lLexer.cc  lexer.l  parser.y
leechVM-master/src/gc/: CMakeLists.txt  gc.cc
leechVM-master/src/leechVM/: CMakeLists.txt  leechVM.cc
leechVM-master/src/leechfile/: CMakeLists.txt  leechfile.cc
leechVM-master/src/leechobj/: CMakeLists.txt  leechobj.cc
leechVM-master/test/classes/: soldatovBench.cc
leechVM-master/test/frontend/: average.leech  classWorking.leech  fib.leech  fib_rec.leech  methods.leech
leechVM-master/test/unit/: CMakeLists.txt  test_footer.hh  test_header.hh
leechVM-master/test/unit/common/: CMakeLists.txt  instruction_test.cc  opcodes.cc
leechVM-master/test/unit/example/: example.cc
leechVM-master/test/unit/frontend/: CMakeLists.txt  config.in  frontend.cc
leechVM-master/test/unit/gc/: CMakeLists.txt  gc_test.cc
leechVM-master/test/unit/leechfile/: CMakeLists.txt  leechfile_test.cc
leechVM-master/test/unit/leechobj/: CMakeLists.txt  leechobj_test.cc
leechVM-master/tools/: CMakeLists.txt
leechVM-master/tools/leech/: CMakeLists.txt  main.cc
riscv-pipelined-cpu-sim/: CMakeLists.txt  README.md  main.cpp
riscv-pipelined-cpu-sim/modules/: address_exceptions.h  alu.h  cmp.h  common.h  data_mem_unit.h  gates.h  instr_mem_unit.h  regfile.h  register.h
riscv-pipelined-cpu-sim/pipeline/: CMakeLists.txt  control_unit.h  ebreak_exception.h  hazard_unit.h  instruction.h  pipeline.cpp  pipeline.h  unsupported_instruction.h
riscv-pipelined-cpu-sim/tests/: CMakeLists.txt  instructions_test.cpp  integration_test.cpp
